--- a/apps/apps.css
+++ b/apps/apps.css
@@ -1,3 +1,12 @@
+#appsBackground {
+  height: auto;
+  max-height: 740px;
+  width: auto;
+  max-width: 100%;
+  background-image: url(../img/apps.png);
+  background-size: cover;
+}
+
 .appsInfoPanel {
   position: relative;
   margin: 0 auto;
