--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -49,3 +49,85 @@
   font-style: normal;
   color: #fff;
 }
+
+.appsWrapper {
+  margin: 0 auto;
+  max-width: 1020px;
+}
+
+#column-1 {
+  display: inline-block;
+  width: 33.3333%;
+  float: left;
+}
+
+#column-1 h2 {
+  font: 22px 'Roboto', sans-serif;
+  color: #4a4a4a;
+  text-transform: uppercase;
+  padding-top: 17px;
+  padding-left: 16px;
+  padding-right: 16px;
+  letter-spacing: 2px;
+  margin: 0;
+}
+
+#column-2 {
+  display: inline-block;
+  width: 66.6667%
+}
+
+#column-2 a {
+  padding: 15px 20px;
+  letter-spacing: 2px;
+  background-color: transparent;
+  color: black;
+  font-size: 16px;
+  font-weight: 400;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: 'Roboto', sans-serif;
+  border: 2px solid black;
+  margin-right: 17px;
+}
+
+#column-2 a:hover {
+  color: white;
+  background: black;
+  transition: all .15s ease-out;
+}
+
+#column-2 ul {
+  font-family: 'Roboto', sans-serif;
+}
+
+#column-2 li {
+  font-family: 'Roboto', sans-serif;
+  color: rgba(26,26,26,.6);
+  line-height: 1.8;
+}
+
+#descriptionView {
+  padding: 17px;
+}
+
+#descriptionView p {
+  font-family: 'Roboto', sans-serif;
+  color: rgba(26,26,26,.6);
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+
+#appLinks {
+  margin-left: 17px;
+  margin-bottom: 17px;
+}
+
+#separator hr {
+  margin: 32px 0;
+  border-width: 0;
+  border-style: none;
+  color: rgba(26, 26, 26, .15);
+  background-color: rgba(26,26,26,.15);
+  height: 1px;
+}
