--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -72,12 +72,30 @@
   margin: 0;
 }
 
-#column-2 {
-  display: inline-block;
-  width: 66.6667%
+#column-1 img {
+  padding-top: 17px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 17px;
 }
 
-#column-2 a {
+#column-2 {
+  display: inline-block;
+  width: 66.6667%;
+  min-height: 250px;
+  position: relative;
+}
+
+#column-2 h3 {
+  font: 16px 'Roboto', sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #4a4a4a;
+  letter-spacing: 2px;
+  margin-top: 0px;
+}
+
+#appLinks a {
   padding: 15px 20px;
   letter-spacing: 2px;
   background-color: transparent;
@@ -91,7 +109,7 @@
   margin-right: 17px;
 }
 
-#column-2 a:hover {
+#appLinks a:hover {
   color: white;
   background: black;
   transition: all .15s ease-out;
@@ -121,6 +139,7 @@
 #appLinks {
   margin-left: 17px;
   margin-bottom: 17px;
+  float: right;
 }
 
 #separator hr {
