--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
   max-width: 100%;
   background-image: url(img/background.png);
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
 }
 
 #header {
