--- a/home.css
+++ b/home.css
@@ -11,6 +11,11 @@
   color: #4a4a4a;
 }
 
+.full {
+  height: 100%;
+  max-height: 100%;
+}
+
 .three-images {
   text-align: center;
   max-width: 1020px;
