Added name to home page

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   background-color: #26262a;
   min-width: 1020px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .headerBackground {
@@ -68,7 +69,7 @@ body {
   cursor: default;
 }
 
-.logoWrapper {
+.logo-wrapper {
   height: auto;
   max-height: 100px;
   width: auto;
@@ -77,9 +78,15 @@ body {
   display: inline-block;
 }
 
-#logoImage img {
-  height: 80px;
-  padding: 10px;
+.logo-wrapper a {
+  text-decoration: none;
+}
+
+.logo-wrapper h1 {
+  color: white;
+  padding: 10px 15px;
+  letter-spacing: 2px;
+  border: 2px solid #fff;
 }
 
 #codeTemp {
