--- a/home.css
+++ b/home.css
@@ -11,6 +11,12 @@
   color: #4a4a4a;
 }
 
+.site {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 .full {
   height: 100%;
   max-height: 100%;
