--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
     display: inline-block;
 
     text-transform: uppercase;
-    font: 13px 'Roboto', sans-serif;
+    font-size: 13px;
     color: rgba(255,255,255,.8);
     text-decoration: none;
     letter-spacing: 2px;
@@ -86,7 +86,6 @@ body {
   color: white;
   padding: 10px 15px;
   letter-spacing: 2px;
-  border: 2px solid #fff;
 }
 
 #codeTemp {
@@ -108,23 +107,23 @@ body {
 .infoPanel a {
   padding: 15px 20px;
   letter-spacing: 2px;
-  background-color: #FFF;
-  color: black;
+  background-color: transparent;
+  color: white;
   font-size: 16px;
   font-weight: 400;
   text-decoration: none;
   text-transform: uppercase;
-  font-family: 'Roboto', sans-serif;
+  border: 2px solid #FFF;
 }
 
 .infoPanel a:hover {
-  opacity: 0.9;
+  background-color: #FFF;
+  color: black;
   transition: all .15s ease-out;
 }
 
 .infoPanel h1 {
   display: block;
-  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 48px;
   letter-spacing: 0px;
@@ -184,7 +183,7 @@ body {
 #footer-nav a {
     display: inline-block;
     text-transform: uppercase;
-    font: 13px 'Roboto', sans-serif;
+    font-size: 13px;
     color: rgba(255,255,255,.8);
     text-decoration: none;
     letter-spacing: 4px;
@@ -192,6 +191,6 @@ body {
 
 .centre-text {
   text-align: center;
-  font: 12px 'Roboto', sans-serif;
+  font-size: 12px;
   color: rgba(255,255,255,.4);
 }
