--- a/contact/contact.css
+++ b/contact/contact.css
@@ -26,7 +26,7 @@
 }
 
 .title label {
-  font: 16px 'Roboto', sans-serif;
+  font-size: 16px;
 }
 
 #name {
@@ -47,7 +47,7 @@
 }
 
 .field label{
-  font: 13px 'Roboto', sans-serif;
+  font-size: 13px;
   color: rgba(26,26,26,.6);
 }
 
@@ -95,7 +95,6 @@
   font-size: 16px;
   font-weight: 400;
   text-decoration: none;
-  font-family: 'Roboto', sans-serif;
   cursor: pointer;
 }
 
