--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -7,49 +7,6 @@
   background-size: cover;
 }
 
-.appsInfoPanel {
-  position: relative;
-  margin: 0 auto;
-  padding: 32px;
-  text-align: center;
-  max-width: 956px;
-}
-
-.appsInfoPanel a {
-  padding: 15px 20px;
-  letter-spacing: 2px;
-  background-color: transparent;
-  color: white;
-  font-size: 16px;
-  font-weight: 400;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-family: 'Roboto', sans-serif;
-  border: 2px solid #FFF;
-}
-
-.appsInfoPanel a:hover {
-  background-color: #FFF;
-  color: black;
-  transition: all .15s ease-out;
-}
-
-.appsInfoPanel h1 {
-  display: block;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 48px;
-  letter-spacing: 0px;
-  text-transform: none;
-  font-size: 68px;
-  line-height: 1em;
-  text-transform: uppercase;
-  letter-spacing: 4px;
-  font-weight: 700;
-  font-style: normal;
-  color: #fff;
-}
-
 .appsWrapper {
   margin: 0 auto;
   max-width: 1020px;
@@ -62,7 +19,6 @@
 }
 
 #column-1 h2 {
-  font: 22px 'Roboto', sans-serif;
   color: #4a4a4a;
   text-transform: uppercase;
   padding-top: 17px;
@@ -87,7 +43,6 @@
 }
 
 #column-2 h3 {
-  font: 16px 'Roboto', sans-serif;
   font-weight: 600;
   text-transform: uppercase;
   color: #4a4a4a;
@@ -105,23 +60,15 @@
   font-weight: 400;
   text-decoration: none;
   text-transform: uppercase;
-  font-family: 'Roboto', sans-serif;
-  border: 2px solid black;
   margin-right: 17px;
 }
 
 #appLinks a:hover {
   color: white;
-  background: black;
-  transition: all .15s ease-out;
-}
-
-#column-2 ul {
-  font-family: 'Roboto', sans-serif;
+  transition: all .15s ease-in-out;
 }
 
 #column-2 li {
-  font-family: 'Roboto', sans-serif;
   color: rgba(26,26,26,.6);
   line-height: 1.8;
 }
@@ -131,7 +78,6 @@
 }
 
 #descriptionView p {
-  font-family: 'Roboto', sans-serif;
   color: rgba(26,26,26,.6);
   margin-top: 0;
   margin-bottom: 24px;
