Home page scales to screen size
Home page scales to devices screen size. Footer moved to separate file and added via jQuery. Code cleanup.

--- a/about/about.css
+++ b/about/about.css
@@ -1,3 +1,8 @@
+.aboutBackground {
+  background-image: url(../img/background.png);
+  background-size: cover;
+}
+
 .technologies {
   margin: 0 auto;
   max-width: 1020px;
