--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -1,8 +1,4 @@
-#appsBackground {
-  height: auto;
-  max-height: 740px;
-  width: auto;
-  max-width: 100%;
+.appsBackground {
   background-image: url(../img/apps.png);
   background-size: cover;
 }
@@ -29,6 +25,7 @@
 }
 
 #column-1 img {
+  max-width: 200px;
   padding-top: 17px;
   padding-left: 16px;
   padding-right: 16px;
@@ -48,21 +45,6 @@
   color: #4a4a4a;
   letter-spacing: 2px;
   margin-top: 0px;
-}
-
-#appLinks a {
-  min-width: 170px;
-  padding: 15px 20px;
-  letter-spacing: 2px;
-  background-color: transparent;
-  color: black;
-  font-size: 16px;
-  font-weight: 400;
-  text-decoration: none;
-  text-transform: uppercase;
-  margin-right: 17px;
-
-  transition: all .15s ease-in-out;
 }
 
 #appLinks a:hover {
@@ -88,11 +70,29 @@
 #appLinks {
   margin-left: 17px;
   margin-bottom: 17px;
+  margin-top: 17px;
   float: right;
 }
 
+#appLinks li {
+  text-decoration: none;
+}
+
+#appLinks a {
+  min-width: 170px;
+  padding: 15px 20px;
+  letter-spacing: 2px;
+  color: black;
+  font-size: 16px;
+  font-weight: 400;
+  text-decoration: none;
+  text-transform: uppercase;
+
+  transition: all .15s ease-in-out;
+}
+
 #separator hr {
-  margin: 32px 0;
+  margin: 52px 0;
   border-style: none;
   background-color: rgba(26,26,26,.15);
   height: 1px;
