--- a/home.css
+++ b/home.css
@@ -1,3 +1,9 @@
+.container {
+  background-image: url(img/background.png);
+  background-size: cover;
+  height: 100%;
+}
+
 #heading {
   max-width: 800px;
   margin: 0 auto;
@@ -9,17 +15,6 @@
 #heading h1 {
   font-size: 34px;
   color: #4a4a4a;
-}
-
-.site {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-.full {
-  height: 100%;
-  max-height: 100%;
 }
 
 .three-images {
