--- a/style.css
+++ b/style.css
@@ -5,75 +5,53 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-.headerBackground {
-  height: auto;
-  max-height: 740px;
-  width: auto;
-  max-width: 100%;
-  background-image: url(img/background.png);
-  background-size: cover;
+.site {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
-#header {
+.headerWrapper {
   padding: 0 20px;
   box-sizing: border-box;
-  z-index: 1000;
-  top: 0;
-  left: 0;
   width: 100%;
 }
 
-.transparent-header #header {
-  background-color: transparent;
-  position: absolute;
-}
-
-#headerNav {
-  display: inline-block;
+.navWrapper {
   float: right;
 }
 
-#headerNav ul {
-  display: inline-block;
+.navWrapper ul {
   margin: 0px;
   padding: 0px;
 }
 
-#headerNav li {
+.navWrapper li {
   display: inline-block;
-  margin: 42.5px 15px;
-  list-style-type: none;
-  position: relative;
+  margin: 5vh 1.004vw;
 }
 
-#headerNav a {
-    display: inline-block;
-
+.navWrapper a {
     text-transform: uppercase;
-    font-size: 13px;
+    font-size: 1.3vh;
     color: rgba(255,255,255,.7);
     text-decoration: none;
     letter-spacing: 2px;
     transition: color .12s 0s ease-in-out;
 }
 
-#headerNav a:hover {
+.navWrapper a:hover {
   transition: color .12s 0s ease-in-out;
   color: white;
 }
 
-#headerNav .active>a {
+.navWrapper .active>a {
   color: white;
   cursor: default;
 }
 
 .logo-wrapper {
-  height: auto;
-  max-height: 100px;
-  width: auto;
-  max-width: 100%;
   float: left;
-  display: inline-block;
 }
 
 .logo-wrapper a {
@@ -81,57 +59,39 @@ body {
 }
 
 .logo-wrapper h1 {
+  font-size: 3.4vh;
   color: white;
-  padding: 10px 15px;
+  padding: 1.056vh 1.004vw;
   letter-spacing: 2px;
 }
 
-#codeTemp {
-  height: auto;
-  max-height: 600px;
-  width: auto;
-  max-width: 100%;
-  padding: 180px 0 155px;
-}
-
-.infoPanel {
-  position: relative;
-  margin: 0 auto;
-  padding: 32px;
+.headingWrapper {
   text-align: center;
-  max-width: 956px;
+  padding: 20vh 0 17vh;
 }
 
-.infoPanel a {
-  padding: 15px 20px;
+.headingWrapper a {
+  font-size: 1.6vh;
+  padding: 1.5vh 1.617vw;
   letter-spacing: 2px;
-  background-color: transparent;
   color: white;
-  font-size: 16px;
-  font-weight: 400;
   text-decoration: none;
   text-transform: uppercase;
   border: 2px solid #FFF;
+  transition: all .15s ease-out;
 }
 
-.infoPanel a:hover {
+.headingWrapper a:hover {
   background-color: #FFF;
   color: black;
   transition: all .15s ease-out;
 }
 
-.infoPanel h1 {
-  display: block;
-  font-weight: 400;
-  font-size: 48px;
-  letter-spacing: 0px;
-  text-transform: none;
-  font-size: 68px;
+.headingWrapper h1 {
+  font-size: 7vh;
   line-height: 1em;
   text-transform: uppercase;
   letter-spacing: 4px;
-  font-weight: 700;
-  font-style: normal;
   color: #fff;
 }
 
@@ -140,46 +100,23 @@ body {
   padding: 96px 32px;
 }
 
-#footer {
-  background-color: #26262a;
-  height: auto;
-  max-height: 600px;
-  width: auto;
-  max-width: 100%;
-
-}
-
-.footer-inner {
-  max-width: 1600px;
-  width: 90%;
-  box-sizing: border-box;
+.footerWrapper {
   padding-top: 64px;
   padding-bottom: 64px;
-  padding-left: 32px;
-  padding-right: 32px;
   text-align: center;
-  margin: auto;
 }
 
-#footer-nav {
-  display: inline-block;
-}
-
-#footer-nav ul {
-  display: inline-block;
+.footerNavWrapper ul {
   margin: 0px;
   padding: 0px;
 }
 
-#footer-nav li {
+.footerNavWrapper li {
   display: inline-block;
   margin: 42.5px 15px;
-  list-style-type: none;
-  position: relative;
 }
 
-#footer-nav a {
-    display: inline-block;
+.footerNavWrapper a {
     text-transform: uppercase;
     font-size: 13px;
     color: rgba(255,255,255,.8);
@@ -188,7 +125,6 @@ body {
 }
 
 .centre-text {
-  text-align: center;
   font-size: 12px;
   color: rgba(255,255,255,.4);
 }
