--- a/about/about.css
+++ b/about/about.css
@@ -15,7 +15,7 @@
 
 #column-1 {
   display: inline-block;
-  width: 33.3333%;
+  width: 30%;
   float: left;
 }
 
@@ -31,7 +31,8 @@
 
 #column-2 {
   display: inline-block;
-  width: 66.6667%
+  width: 66%;
+  padding-left: 32px;
 }
 
 #column-2 h3 {
