Added fixed navigation bar

--- a/components/footer.html
+++ b/components/footer.html
@@ -6,7 +6,7 @@
       <li class="apps"><a href="../portfolio">Portfolio</a></li>
       <!--li class="blog"><a href="../blog">Blog</a></li!-->
       <li class="about"><a href="../about">About</a></li>
-      <li class="contact"><a href="../contact">Contact</a></li>
+      <!-- <li class="contact"><a href="../contact">Contact</a></li> -->
     </ul>
   </div>
   <div id="copyright">
