--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  scroll-behavior: smooth;
+}
+
+.navBar {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 100;
 }
 
 .headerWrapper {
@@ -19,6 +27,7 @@ body {
 
 .navWrapper {
   float: right;
+  padding-right: 5%;
 }
 
 .navWrapper ul {
@@ -52,6 +61,7 @@ body {
 
 .logo-wrapper {
   float: left;
+  padding-left: 5%;
 }
 
 .logo-wrapper a {
@@ -98,6 +108,7 @@ body {
 .content {
   background-color: #FFF;
   padding: 96px 32px;
+  position: relative;
 }
 
 .footerWrapper {
